deployment/kustomize/environments/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangofluent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/server-alias: "django-fluent.com djangofluent.org djangofluent.com www.django-fluent.com www.djangofluent.org www.djangofluent.com"
spec:
  tls:
    - secretName: djangofluent-tls-prd
      hosts:
        - django-fluent.org
        - www.django-fluent.org
  rules:
    - host: django-fluent.org # rest is aliased
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djangofluent
                port:
                  number: 80
    - host: www.django-fluent.org  # need separate host for cert-manager
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djangofluent
                port:
                  number: 80
---
# Leverage nginx-ingress cache for /media/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangofluent-media
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: django-fluent.org
      http:
        paths:
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: djangofluent
                port:
                  number: 80
---
# Leverage nginx-ingress cache for /static/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangofluent-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: django-fluent.org
      http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: djangofluent
                port:
                  number: 80
